# SynapseVM-Distributed-Saliency-Aware-KV-Cache-Management

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  benchmark_oneshot.ps1  build_vs143.bat  cuda_toolchain.cmake  nvcc_wrapper.bat  project_summary.md  readiness_report.json  vllm_config.py  walkthrough.md
include/: synapse_api.h
include/synapse/engine/: QuantizationEngine.h  VMManager.h
include/synapse/memory/: SlabAllocator.h
include/synapse/saliency/: SaliencyScorer.h
research/: benchmarks.md  niah_logic.cpp  sim_needle_test.cpp
src/: api.cpp  main.cpp  synapse_vllm_adapter.cpp
src/engine/: VMManager.cpp
src/kernels/: quantization.cu  saliency.cu
src/memory/: SlabAllocator.cpp
src/scheduler/: SaliencyScorer.cpp
tests/: audit_latency.cpp  audit_precision.cpp  audit_security_cpp.cpp  readiness_report.py  stress_test.py
